--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "test": "vitest run"
+  },
   "devDependencies": {
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "vitest": "^1.6.0"
   }
 }
