Add contact form script and simple test runner

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "vitest run"
+    "test": "node tests/health.test.js"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.5",
