--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Node dependencies
+node_modules/
+
+# Build artifacts
+build/
+dist/
+
+# Local logs
+*.log
+logs/
+
+# OS junk files
+.DS_Store
+Thumbs.db
+
+# Tailwind binaries
 tailwindcss
 tailwindcss-linux-x64
-.DS_Store
