--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "test": "node tests/health.test.js"
+    "test": "node tests/health.test.js",
+    "dev": "tailwindcss -i css/tailwind_input.css -o css/tailwind_output.css --watch",
+    "build": "tailwindcss -i css/tailwind_input.css -o css/tailwind_output.css --minify"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.5",
