--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "3.27.0",
     "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-chart-kit": "^6.12.0",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
