fix: use environment variable for token to avoid substitution issues

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -16,12 +16,14 @@ jobs:
           fetch-depth: 0 # This makes sure you get the full git history
 
       - name: Mirror push to backup repository
+        env:
+          BACKUP_TOKEN: ${{ secrets.BACKUP_REPO_PAT }}
         run: |
           git config --global user.email "arnaud_decube@hotmail.com"
           git config --global user.name "Lucid-Directions"
 
           # Add the backup repo as a remote called 'backup'
-          git remote add backup https://x-access-token:${{ secrets.BACKUP_REPO_PAT }}@github.com/Lucid-Directions/flynlo-backup.git
+          git remote add backup https://x-access-token:${BACKUP_TOKEN}@github.com/Lucid-Directions/flynlo-backup.git
 
           # Push all branches, tags, and refs
           git push --mirror backup
