--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -16,12 +16,17 @@ jobs:
           fetch-depth: 0 # This makes sure you get the full git history
 
       - name: Mirror push to backup repository
+        env:
+          GITHUB_TOKEN: ${{ secrets.BACKUP_REPO_PAT }}
         run: |
           git config --global user.email "arnaud_decube@hotmail.com"
           git config --global user.name "Lucid-Directions"
 
+          # Configure git to use the token
+          git config --global url."https://x-access-token:${GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
+
           # Add the backup repo as a remote called 'backup'
-          git remote add backup https://x-access-token:${{ secrets.BACKUP_REPO_PAT }}@github.com/Lucid-Directions/flynlo-backup.git
+          git remote add backup https://github.com/Lucid-Directions/flynlo-backup.git
 
           # Push all branches, tags, and refs
           git push --mirror backup
