ci: add .xcode.env with NODE_BINARY

--- a/CashApp-iOS/CashAppPOS/ios/.xcode.env
+++ b/CashApp-iOS/CashAppPOS/ios/.xcode.env
@@ -1,19 +1,1 @@
-# Resolve react-native-xcode.sh and related helpers from node_modules.
-export NODE_BINARY=$(command -v node)
-export NODE_ARGS=" --max-old-space-size=8192"
-
-# Disable Metro auto port selection to prevent conflicts
-export RCT_METRO_PORT=8081
-
-# Performance optimizations for Xcode 16.4
-export USE_HERMES=false
-export SKIP_BUNDLING_IN_DEBUG=false
-
-# Memory optimizations
-export NODE_OPTIONS="--max-old-space-size=8192"
-
-# Disable new architecture
-export RCT_NEW_ARCH_ENABLED=0
-
-# Add paths for node
-export PATH=$PATH:/opt/homebrew/bin:/usr/local/bin
+export NODE_BINARY="/opt/homebrew/bin/node"
