--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -6,7 +6,8 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "jest",
+    "test": "jest -c jest.unit.config.js",
+    "test:int": "JEST_INTEGRATION=1 jest -c jest.integration.config.js",
     "lint": "eslint .",
     "build:ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/main.jsbundle",
     "clean": "react-native clean && cd ios && xcodebuild clean && cd ..",
@@ -29,8 +30,11 @@
     "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-native": "0.72.17",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "2.13.4",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-keychain": "^10.0.0",
     "react-native-localization": "^2.3.2",
     "react-native-qrcode-svg": "^6.3.0",
@@ -50,11 +54,14 @@
     "@react-native/eslint-config": "^0.73.0",
     "@react-native/metro-config": "^0.73.0",
     "@react-native/typescript-config": "^0.73.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^13.2.0",
     "@types/react": "^18.2.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.0",
+    "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.8.0",
     "react-test-renderer": "18.2.0",
