stage-2: add docker helper scripts and test:int:docker pipeline

--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -8,6 +8,9 @@
     "ios": "react-native run-ios",
     "test": "jest -c jest.unit.config.js",
     "test:int": "JEST_INTEGRATION=1 jest -c jest.integration.config.js",
+    "docker:start": "docker compose -f ../../backend/docker-compose.yml up -d --build backend",
+    "docker:stop": "docker compose -f ../../backend/docker-compose.yml down -v",
+    "test:int:docker": "npm run docker:start && npm run test:int && npm run docker:stop",
     "lint": "eslint .",
     "build:ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/CashAppPOS/main.jsbundle",
     "clean": "react-native clean && cd ios && xcodebuild clean && cd ..",
