--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -1,45 +1,27 @@
-name: Backup Repository
 
-###############################################################################
-# This workflow ONLY runs when it is triggered in the source organisation      #
-# (Lucid-Directions).  The identical file that gets mirrored into the backup  #
-# repo (ryand2626/…) is skipped automatically by the `if:` guard.             #
-###############################################################################
+      name: Backup Repository
 
 on:
-  # hourly backup; change to daily if you prefer
   schedule:
-    - cron: "0 * * * *"
-  # manual trigger
-  workflow_dispatch:
-
-# the default GITHUB_TOKEN issued to the job needs write permission
-permissions:
-  contents: write    # required for git push --mirror
-
-env:
-  DEST_OWNER: ryand2626          # where to push the mirror
-  SOURCE_OWNER: Lucid-Directions # who is allowed to run the job
-  # destination repo name will be the same as current repo:
-  DEST_REPO: ${{ github.event.repository.name }}
+    - cron: '0 * * * *' # Runs every hour at minute 0
+  workflow_dispatch:     # Allows you to run manually too
 
 jobs:
   backup:
-    # Skip the job when it’s executed in any repo that isn’t the source org
-    if: github.repository_owner == env.SOURCE_OWNER
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clone repository as a bare mirror
-        run: |
-          git clone --mirror "https://github.com/${{ github.repository.full_name }}" repo
+      - name: Checkout source repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # This makes sure you get the full git history
+          token: ${{ secrets.BACKUP_REPO_PAT }}
 
-      - name: Push mirror to personal backup repo
-        env:
-          # use a PAT from the destination account (scope: public_repo or repo)
-          PAT: ${{ secrets.BACKUP_TOKEN }}
+      - name: Mirror push to backup repository
         run: |
-          cd repo
-          git remote set-url --push origin \
-            "https://x-access-token:${PAT}@github.com/${{ env.DEST_OWNER }}/${{ env.DEST_REPO }}.git"
-          git push --mirror
+          git config --global user.email "arnaud_decube@hotmail.com"
+          git config --global user.name "Lucid-Directions"
+          # Add the backup repo as a remote called 'backup'
+          git remote add backup https://x-access-token:${{ secrets.BACKUP_REPO_PAT }}@github.com/ryand2626/cashapp-fynlo-backup.git
+          # Push all branches, tags, and refs
+          git push --mirror backup
