--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -52,6 +52,7 @@ aiohttp==3.9.1
 # Template Engine & Email - Required for email service
 jinja2==3.1.4
 aiosmtplib==3.0.2
+sendgrid==6.11.0
 
 # Development Dependencies - Moved to requirements-dev.txt
 # pytest==7.4.3
