--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -30,6 +30,7 @@
     "@react-navigation/stack": "^6.3.0",
     "@sentry/react-native": "^6.0.0",
     "@stripe/stripe-react-native": "^0.37.2",
+    "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "lucide-react-native": "^0.525.0",
@@ -48,6 +49,7 @@
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "3.27.0",
     "react-native-svg": "^15.2.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.15.0",
     "sumup-react-native-alpha": "^0.1.36",
