--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,6 +23,15 @@ JWT_SECRET_KEY="CHANGE-ME-GENERATE-JWT-SECRET-KEY-FOR-PRODUCTION"
 ALGORITHM="HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
+# Supabase Authentication Configuration
+# Get these from your Supabase project dashboard
+SUPABASE_URL="https://YOUR-PROJECT-ID.supabase.co"
+SUPABASE_ANON_KEY="YOUR-ANON-KEY-FROM-SUPABASE-DASHBOARD"
+SUPABASE_SERVICE_ROLE_KEY="YOUR-SERVICE-ROLE-KEY-FROM-SUPABASE-DASHBOARD"
+
+# Platform Owner Configuration
+PLATFORM_OWNER_EMAIL="admin@fynlo.co.uk"
+
 # Payment Processing Configuration
 # WARNING: These are TEST keys only! Replace with production keys for live deployment
 # Never commit actual payment keys to version control!
