--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,10 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 cryptography==41.0.7 # For Fernet encryption of payment credentials
 
+# Supabase Authentication - For migration from JWT to Supabase
+supabase==2.3.0
+gotrue==2.0.0
+
 # Payment Processing - Updated to latest
 stripe==8.0.0
 requests==2.31.0
