fix: add missing reportlab dependency for PDF exports
- Add reportlab==4.0.8 to requirements.txt
- Fixes ModuleNotFoundError preventing backend startup
- Required for PDF export functionality in exports.py

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,6 +40,9 @@ Pillow==10.1.0
 # python-magic-bin==0.4.14 # Often problematic, try python-magic if needed
 python-magic==0.4.27 # Common alternative for Linux
 
+# PDF Generation - Required for export functionality
+reportlab==4.0.8
+
 # Background Tasks - Latest stable version
 celery==5.3.6
 
