--- a/backend/deploy/spec.yaml
+++ b/backend/deploy/spec.yaml
@@ -1,4 +1,4 @@
-# DigitalOcean App Spec for Fynlo POS Backend
+# DigitalOcean App Spec for Fynlo POS Backend - FIXED VERSION
 name: fynlo-pos-backend
 region: lon # London region, as specified for the database
 
@@ -7,6 +7,7 @@ services:
   - name: api
     # Use Docker build - must specify full path from repo root
     dockerfile_path: backend/Dockerfile
+    source_dir: backend  # FIXED: Added source directory
     github:
       repo: Lucid-Directions/cashapp-fynlo
       branch: main
@@ -29,34 +30,43 @@ services:
       - key: REDIS_URL
         scope: RUN_AND_BUILD_TIME
         type: SECRET # Set value in DigitalOcean App Platform dashboard
-      # Add any other non-secret environment variables from your .env file here
-      # For example:
-      # - key: SOME_OTHER_CONFIG
-      #   value: "some_value"
-    instance_size_slug: basic-s # Increase to basic-s for sufficient memory as per investigation
+      # SUPABASE CONFIGURATION (Configure in App Platform UI)
+      - key: SUPABASE_URL
+        scope: RUN_TIME
+        type: SECRET # Set value in DigitalOcean App Platform dashboard
+      - key: SUPABASE_SERVICE_ROLE_KEY
+        scope: RUN_TIME
+        type: SECRET # Set value in DigitalOcean App Platform dashboard
+      # SUMUP CONFIGURATION (if needed)
+      - key: SUMUP_API_KEY
+        scope: RUN_TIME
+        type: SECRET # Set value in DigitalOcean App Platform dashboard
+      - key: SUMUP_MERCHANT_CODE
+        scope: RUN_TIME
+        type: SECRET # Set value in DigitalOcean App Platform dashboard
+    instance_size_slug: basic-s # Sufficient memory for production
     instance_count: 1
     # HTTP routes
     routes:
       - path: / # Route all traffic to this service
-    # Health check - temporarily disabled until database secrets configured
-    # health_check:
-    #   http_path: /health # Path defined in Dockerfile HEALTHCHECK
-    #   initial_delay_seconds: 60  # Longer startup time
-    #   period_seconds: 30          # Less frequent checks
-    #   timeout_seconds: 10         # Longer timeout
-    #   failure_threshold: 5        # More retries before failing
-    #   success_threshold: 1
+    # Health check - FIXED: Re-enabled with optimized settings
+    health_check:
+      http_path: /health # Now returns instantly without DB checks
+      initial_delay_seconds: 30  # Reduced from 60 - app starts faster now
+      period_seconds: 30         # Check every 30 seconds
+      timeout_seconds: 10        # Should respond in <1 second now
+      failure_threshold: 3       # Reduced from 5 - fail faster
+      success_threshold: 1       # One success is enough
     # Port for the service to listen on internally
     http_port: 8080
 
 # Define jobs that run during deployment
-# NOTE: Migration job disabled until database secrets are configured
+# NOTE: Migration job should be enabled once database is properly connected
 # jobs:
 #   - name: migrate
 #     kind: PRE_DEPLOY # Run before deploying the 'api' service
-#     # Use same Docker setup as main service
-#     dockerfile_path: Dockerfile
-#     source_dir: backend
+#     dockerfile_path: backend/Dockerfile
+#     source_dir: backend  # FIXED: Added source directory
 #     github:
 #       repo: Lucid-Directions/cashapp-fynlo
 #       branch: main
@@ -70,17 +80,15 @@ services:
 #         type: SECRET # Set value in DigitalOcean App Platform dashboard
 #     instance_size_slug: basic-xxs # Migrations usually don't need large instances
 
-# Optional: Define databases, static sites, etc.
-# For this deployment, databases are already provisioned.
+# Alerting - RECOMMENDED: Enable these for deployment monitoring
+alerts:
+  - rule: DEPLOYMENT_FAILED
+  - rule: DOMAIN_FAILED
+  - rule: DEPLOYMENT_LIVE
 
-# Alerting (optional, configure in DigitalOcean UI or add spec here)
-# alerts:
-# - rule: DEPLOYMENT_FAILED
-# - rule: DOMAIN_FAILED
-
-# Custom domain (optional, configure in DigitalOcean UI or add spec here)
+# Optional: Custom domain configuration
 # domains:
-# - domain: your-app-custom-domain.com
-#   type: PRIMARY # or ALIAS
-#   zone: your-app-custom-domain.com # if using DigitalOcean DNS
-#   minimum_tls_version: "1.2"
+#   - domain: api.fynlopos.com
+#     type: PRIMARY
+#     zone: fynlopos.com # if using DigitalOcean DNS
+#     minimum_tls_version: "1.3"
