fix(backend): resolve database connection and configuration issues
- Remove hardcoded localhost database URL from alembic.ini
- Update config.py to use environment variables for DATABASE_URL and REDIS_URL
- Fix simple_main.py to use environment variable for database connection
- Add legacy compatibility comment for Odoo endpoints
- Ensure all database connections use environment variables in production

This prevents the backend from trying to connect to localhost databases when deployed on DigitalOcean.

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -40,7 +40,8 @@ prepend_sys_path = .
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://fynlo_user:fynlo_password@localhost:5432/fynlo_pos
+# sqlalchemy.url is now dynamically set in alembic/env.py using settings.DATABASE_URL
+# This ensures we use the correct database URL from environment variables
 
 
 [post_write_hooks]
