fix(backend): clean up duplicate payment providers and improve environment configuration
- Remove duplicate payment provider files (stripe_provider.py, square_provider.py, sumup_provider.py)
- Update test imports to use consolidated payment_providers module
- Add BASE_URL to .env.example with production deployment guidance
- Improve environment variable documentation with DigitalOcean specific notes

This eliminates code duplication and ensures consistent payment provider usage across the application.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,7 @@ APP_NAME="Fynlo POS"
 DEBUG=true
 ENVIRONMENT="development"
 API_V1_STR="/api/v1"
+BASE_URL="http://localhost:8000"  # Use "https://your-domain.com" in production
 
 # Database Configuration
 # NEVER use hardcoded passwords in production!
@@ -73,9 +74,12 @@ CORS_ORIGINS="http://localhost:3000,http://localhost:19006,http://localhost:8081
 # ✅ Replace all test payment keys with production keys
 # ✅ Use managed database with SSL (DATABASE_URL)
 # ✅ Use managed Redis with authentication (REDIS_URL)
-# ✅ Configure CORS_ORIGINS for your production domain
+# ✅ Set BASE_URL to your production domain (https://your-domain.com)
+# ✅ Configure CORS_ORIGINS for your production domain only
 # ✅ Enable HTTPS/SSL certificates
 # ✅ Set up database backups
 # ✅ Configure monitoring and alerting
+# ✅ Test all payment integrations in production environment
 # ✅ Never commit the actual .env file to version control!
+# ✅ For DigitalOcean App Platform: Set environment variables in App Spec
 # =============================================================================
