--- a/web-platform/.env.example
+++ b/web-platform/.env.example
@@ -1,6 +1,6 @@
 # Backend API Configuration
-VITE_API_URL=https://your-backend-url.com/api/v1
-VITE_WEBSOCKET_URL=wss://your-backend-url.com/ws
+VITE_API_URL=https://api.fynlo.co.uk/api/v1
+VITE_WEBSOCKET_URL=wss://api.fynlo.co.uk/ws
 
 # Supabase Configuration (for authentication)
 VITE_SUPABASE_URL=https://your-project.supabase.co
