fix(build): use Bun package manager instead of npm
- Remove package-lock.json as project uses bun.lockb
- Update vercel.json to use 'bun run build'
- Fixes platform-specific dependency errors on Vercel

--- a/web-platform/vercel.json
+++ b/web-platform/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "bun run build",
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
