--- a/CashApp-iOS/CashAppPOS/.gitignore
+++ b/CashApp-iOS/CashAppPOS/.gitignore
@@ -95,3 +95,11 @@ node_modules/**/build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment files - NEVER commit these
+.env
+.env.local
+.env.development
+.env.production
+.env.staging
+.env.*
