--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,2 +1,2 @@
-web: uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080} --workers ${WEB_CONCURRENCY:-1} --log-level info --loop uvloop
+web: python start.py
 release: alembic upgrade head && python seed_chucho_menu.py
