fix(shared): move typescript to dependencies for Vercel build
- Vercel installs with --production flag by default
- TypeScript needs to be in dependencies, not devDependencies
- This fixes the 'tsc: command not found' error
- Reverted unnecessary web-platform changes

--- a/shared/package.json
+++ b/shared/package.json
@@ -10,8 +10,10 @@
     "clean": "rm -rf dist",
     "prepare": "npm run build"
   },
+  "dependencies": {
+    "typescript": "^5.2.2"
+  },
   "devDependencies": {
-    "typescript": "^5.2.2",
     "@types/node": "^20.0.0"
   }
 }
