fix: add Supabase client configuration with proper security
- Created src/lib/supabase.ts for Supabase client initialization
- Made environment variables REQUIRED with no hardcoded fallbacks
- Added validation to ensure SUPABASE_URL and SUPABASE_ANON_KEY are set
- Updated .env.example with required Supabase configuration
- Fixes authentication failure by providing missing Supabase client

Security: All credentials must be managed exclusively via environment variables

--- a/CashApp-iOS/CashAppPOS/.env.example
+++ b/CashApp-iOS/CashAppPOS/.env.example
@@ -2,6 +2,10 @@
 # Copy this file to .env and fill in your values
 # DO NOT commit the actual .env file
 
+# Supabase Configuration (REQUIRED)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-supabase-anon-key
+
 # API Configuration
 API_BASE_URL=https://api.yourdomain.com
 WEBSOCKET_URL=wss://api.yourdomain.com/ws
