fix: add secure Supabase configuration without hardcoded credentials
SECURITY: Implement Supabase client configuration with proper security
- Created supabase.ts that requires environment variables (no hardcoded keys)
- Added validation to ensure SUPABASE_URL and SUPABASE_ANON_KEY are set
- Updated .env.example to document required Supabase configuration
- Added README.md explaining security requirements for lib directory
- Fixes authentication failure while maintaining security best practices

All credentials must be managed exclusively via environment variables.
This ensures no sensitive API keys are exposed in source code.

--- a/CashApp-iOS/CashAppPOS/.env.example
+++ b/CashApp-iOS/CashAppPOS/.env.example
@@ -2,6 +2,11 @@
 # Copy this file to .env and fill in your values
 # DO NOT commit the actual .env file
 
+# Supabase Configuration (REQUIRED)
+# Get these values from your Supabase project settings
+SUPABASE_URL=https://your-project-ref.supabase.co
+SUPABASE_ANON_KEY=your-supabase-anon-key-here
+
 # API Configuration
 API_BASE_URL=https://api.yourdomain.com
 WEBSOCKET_URL=wss://api.yourdomain.com/ws
