fix: resolve React Native UIViewController threading issue
- Add threading configuration to Podfile for react-native-screens
- Disable forced main queue initialization to prevent UIKit calls on background threads
- Add patch-package for future runtime fixes
- Install react-native-config dependency for environment variables
- Update metro.config.js to support monorepo shared packages

This fixes the Xcode error:
'-[UIViewController invalidate] must be used from main thread only'

The issue was caused by react-native-screens v3.27.0 making UIKit calls
from background threads. The fix adds preprocessor definitions to ensure
proper thread handling.

--- a/CashApp-iOS/CashAppPOS/ios/Podfile
+++ b/CashApp-iOS/CashAppPOS/ios/Podfile
@@ -108,6 +108,13 @@ target 'CashAppPOS' do
           config.build_settings['CLANG_WARN_STRICT_PROTOTYPES'] = "NO"
         end
         
+        # Fix react-native-screens threading issue
+        if target.name == "RNScreens"
+          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
+          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'RCT_NEW_ARCH_ENABLED=0'
+          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'RN_DISABLE_FORCED_MAIN_QUEUE_INIT=1'
+        end
+        
         # Fix SocketRocket priority inversion warnings
         if target.name == "SocketRocket"
           config.build_settings['GCC_WARN_ABOUT_MISSING_PROTOTYPES'] = "NO"
