--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -16,7 +16,8 @@
     "clean": "react-native clean && cd ios && xcodebuild clean && cd ..",
     "clean:all": "rm -rf node_modules && npm install && cd ios && pod install && cd ..",
     "audit:security": "npm audit --audit-level high",
-    "update:dependencies": "npm update && npm audit fix"
+    "update:dependencies": "npm update && npm audit fix",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
@@ -39,6 +40,7 @@
     "react-native-biometrics": "^3.0.1",
     "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "2.13.4",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^8.2.1",
@@ -71,6 +73,7 @@
     "jest": "^29.6.0",
     "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
+    "patch-package": "^8.0.0",
     "prettier": "^2.8.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.0.0"
