fix: resolve all linting errors in security implementation
- Fixed all docstring formatting issues (D400, D205, D202)
- Fixed all line length violations (E501)
- Updated black configuration to use 79 character limit to match flake8
- Fixed unused imports and variables
- Ensured consistent code formatting throughout
- All flake8 and black checks now pass successfully

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -52,6 +52,7 @@ python-json-logger==2.0.7
 
 # Validation Dependencies - Required for core validation
 jsonschema==4.21.1
+bleach==6.1.0  # HTML sanitization for security
 
 # HTTP Client Dependencies - Required for payment providers
 aiohttp==3.9.1
@@ -66,5 +67,5 @@ resend==0.7.0
 
 # Development Dependencies - Moved to requirements-dev.txt
 # pytest==7.4.3
-# pytest-asyncio==0.21.1  
+# pytest-asyncio==0.21.1
 # black==23.11.0
