--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -70,6 +70,9 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.0",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-testing-library": "^7.6.2",
     "jest": "^29.6.0",
     "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
