--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
-  "*.{json,md,yml,yaml}": ["prettier --write"],
+  "*.{js,jsx,ts,tsx}": ["eslint --fix"],
+  "*.{json,md,yml,yaml}": [],
   "backend/**/*.py": ["black", "isort", "flake8"]
 }
