fix: move typescript back to devDependencies in shared package
- Revert change that moved typescript from devDependencies to dependencies
- This matches the configuration in PR 374 which deploys successfully
- Should help resolve Vercel build issues

--- a/shared/package.json
+++ b/shared/package.json
@@ -10,10 +10,8 @@
     "clean": "rm -rf dist",
     "prepare": "npm run build"
   },
-  "dependencies": {
-    "typescript": "^5.2.2"
-  },
   "devDependencies": {
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.2.2"
   }
 }
