fix: install devDependencies in shared package for Vercel build
- Add --include=dev flag to npm install in build:shared script
- This ensures typescript is installed in production environments
- Fixes 'tsc: command not found' error during Vercel deployment
- Local builds work because devDependencies are installed by default

--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run build:shared && vite build",
-    "build:shared": "cd ../shared && npm install && npm run build",
+    "build:shared": "cd ../shared && npm install --include=dev && npm run build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
