--- a/web-platform/vercel.json
+++ b/web-platform/vercel.json
@@ -1,4 +1,8 @@
 {
+  "framework": "vite",
+  "buildCommand": "cd ../shared && npm install && npm run build && cd ../web-platform && npm run build",
+  "installCommand": "cd ../shared && npm install && cd ../web-platform && npm install",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/(.*)",
