--- a/web-platform/vercel.json
+++ b/web-platform/vercel.json
@@ -1,7 +1,6 @@
 {
   "framework": "vite",
-  "buildCommand": "cd ../shared && npm install && npm run build && cd ../web-platform && npm run build",
-  "installCommand": "cd ../shared && npm install && cd ../web-platform && npm install",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "rewrites": [
     {
