fix: move typescript to dependencies in shared package
The 'prepare' script runs during npm install and needs tsc available.
In production mode (which Vercel uses), devDependencies are not installed,
causing 'tsc: command not found' error.

Moving typescript to dependencies ensures it's available during the
prepare lifecycle hook when Vercel runs npm install.

--- a/shared/package.json
+++ b/shared/package.json
@@ -10,8 +10,10 @@
     "clean": "rm -rf dist",
     "prepare": "npm run build"
   },
-  "devDependencies": {
-    "@types/node": "^20.0.0",
+  "dependencies": {
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0"
   }
 }
