--- a/shared/package.json
+++ b/shared/package.json
@@ -7,13 +7,10 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "clean": "rm -rf dist",
-    "prepare": "npm run build"
-  },
-  "dependencies": {
-    "typescript": "^5.2.2"
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.2.2"
   }
 }
