--- a/web-platform/package.json
+++ b/web-platform/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:shared && vite build",
-    "build:shared": "cd ../shared && npm install --include=dev && npm run build",
+    "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fynlo/shared": "file:../shared",
+    "@fynlo/shared": "*",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
