--- a/web-platform/vercel.json
+++ b/web-platform/vercel.json
@@ -1,7 +1,8 @@
 {
   "framework": "vite",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "buildCommand": "cd .. && npm run build",
+  "installCommand": "cd .. && npm install",
+  "outputDirectory": "web-platform/dist",
   "rewrites": [
     {
       "source": "/(.*)",
