fix: Configure Vercel for Turborepo monorepo deployment
- Add root vercel.json for monorepo configuration
- Update web-platform vercel.json to work with npm workspaces
- Add .vercelignore to exclude unnecessary files
- Remove conflicting .vercel directories
- Configure build to run from monorepo root

--- a/web-platform/vercel.json
+++ b/web-platform/vercel.json
@@ -1,8 +1,8 @@
 {
   "framework": "vite",
-  "buildCommand": "cd .. && npm run build",
-  "installCommand": "cd .. && npm install",
-  "outputDirectory": "web-platform/dist",
+  "buildCommand": "cd .. && npm install && cd web-platform && npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "echo 'Skipping install'",
   "rewrites": [
     {
       "source": "/(.*)",
