fix: Remove hardcoded SumUp API key and implement secure backend configuration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -49,6 +49,13 @@ SQUARE_LOCATION_ID="YOUR_SANDBOX_LOCATION_ID"
 SQUARE_WEBHOOK_SIGNATURE_KEY="YOUR_SANDBOX_WEBHOOK_KEY"
 SQUARE_ENVIRONMENT="sandbox"  # Change to "production" for live
 
+# SumUp Configuration
+# CRITICAL: Never commit real API keys to source control!
+SUMUP_API_KEY="YOUR_SUMUP_API_KEY_HERE"
+SUMUP_ENVIRONMENT="sandbox"  # Options: sandbox, production
+SUMUP_APP_ID="com.fynlo.pos"  # App ID for mobile SDK initialization
+SUMUP_MERCHANT_CODE=""  # Optional: Default merchant code
+
 # QR Payment Settings
 QR_PAYMENT_FEE_PERCENTAGE=1.2
 DEFAULT_CARD_FEE_PERCENTAGE=2.9
