fix: implement comprehensive replica monitoring system for DigitalOcean
- Add instance tracking with Redis heartbeat mechanism
- Create detailed health endpoints showing instance information
- Implement DigitalOcean API integration for accurate replica counts
- Add monitoring dashboard endpoints with discrepancy detection
- Create automated validation service with alerting capabilities
- Document deployment and troubleshooting procedures

This addresses issue #356 where DigitalOcean shows incorrect replica
counts in the dashboard. The solution provides accurate real-time
monitoring through multiple data sources and automated alerts.

Key features:
- Instance heartbeat every 10 seconds with 30s TTL
- Comprehensive health endpoints (/health/detailed, /health/instances)
- DigitalOcean API integration for truth source
- Monitoring dashboard with recommendations
- Automated validation with webhook/email alerts
- Detailed deployment documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -71,6 +71,12 @@ UPLOAD_DIR="uploads"
 # Development Settings
 CORS_ORIGINS="http://localhost:3000,http://localhost:19006,http://localhost:8081"
 
+# DigitalOcean Monitoring Configuration
+# Required for accurate replica count monitoring (Issue #356)
+DO_API_TOKEN=""  # Personal access token from https://cloud.digitalocean.com/account/api/tokens
+DO_APP_ID=""  # App ID from: doctl apps list
+DESIRED_REPLICAS=2  # Number of backend instances to run
+
 # =============================================================================
 # PRODUCTION DEPLOYMENT SECURITY CHECKLIST
 # =============================================================================
