fix: add comprehensive audit logging for failed authentication attempts
- Import AuditLoggerService and audit event types
- Add audit logging for all authentication failure scenarios:
  - Invalid JWT tokens (risk score: 70)
  - Expired tokens (risk score: 30)
  - User not found (risk score: 50)
  - Unexpected auth errors (risk score: 80)
  - Service configuration errors (risk score: 90)
- Capture client IP and user agent for security tracking
- Properly handle all exception types with appropriate logging
- Update .env.example to document DO_API_TOKEN_ENCRYPTED requirement

This addresses PR Guardian recommendation #3 for security audit logging

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -73,9 +73,11 @@ CORS_ORIGINS="http://localhost:3000,http://localhost:19006,http://localhost:8081
 
 # DigitalOcean Monitoring Configuration
 # Required for accurate replica count monitoring (Issue #356)
-DO_API_TOKEN=""  # Personal access token from https://cloud.digitalocean.com/account/api/tokens
+# DO_API_TOKEN=""  # DEPRECATED - Use DO_API_TOKEN_ENCRYPTED instead for security
+DO_API_TOKEN_ENCRYPTED=""  # Encrypted token - use backend/scripts/encrypt_do_token.py to generate
 DO_APP_ID=""  # App ID from: doctl apps list
 DESIRED_REPLICAS=2  # Number of backend instances to run
+# SECURITY: In production, always use encrypted tokens to prevent exposure in logs
 
 # =============================================================================
 # PRODUCTION DEPLOYMENT SECURITY CHECKLIST
