--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -66,12 +66,15 @@
     "@react-native/typescript-config": "^0.73.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^13.2.0",
+    "@types/jscodeshift": "^17.3.0",
     "@types/react": "^18.2.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.0",
     "eslint": "^8.19.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.6.0",
     "jest-fetch-mock": "^3.0.3",
+    "jscodeshift": "^17.3.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "patch-package": "^8.0.0",
     "prettier": "^2.8.0",
