fix: update Prettier scripts to include root-level files
- Changed glob pattern from 'src/**/*' to '**/*' to include root files
- Added .prettierignore to exclude non-source files
- Ensures consistent formatting across entire codebase including index.js, App.tsx, config files, etc.

--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -15,8 +15,8 @@
     "lint:fix": "eslint . --fix",
     "lint:ts": "tsc --noEmit",
     "lint:all": "npm run lint:ts && npm run lint",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
-    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "build:ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/CashAppPOS/main.jsbundle",
     "clean": "react-native clean && cd ios && xcodebuild clean && cd ..",
     "clean:all": "rm -rf node_modules && npm install && cd ios && pod install && cd ..",
