--- a/CashApp-iOS/CashAppPOS/tsconfig.json
+++ b/CashApp-iOS/CashAppPOS/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
+    "module": "es2015",
     "lib": ["es2022"],
     "jsx": "react-native",
     "strict": true,
@@ -13,7 +13,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "allowJs": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
+    "customConditions": ["react-native"],
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
