debug: run diagnostic script during Docker build
Temporarily adding diagnostic output to understand why deployment
references app/models/order.py when it doesn't exist in our codebase.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,6 +26,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Debug deployment structure
+RUN python app/debug_deployment.py || echo "Debug script failed"
+
 # Create uploads directory
 RUN mkdir -p uploads
 
