fix: resolve CI workflow issues
- Remove deprecated E999 rule from ruff linter
- Replace @testing-library/react-hooks with react-native equivalent
- Update import in performance test to use react-native testing library

--- a/.github/workflows/code-quality-check.yml
+++ b/.github/workflows/code-quality-check.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Run Ruff linter
       run: |
         cd backend
-        ruff check app --select E999,F,E,W --fix --exit-non-zero-on-fix
+        ruff check app --select F,E,W --fix --exit-non-zero-on-fix
         echo "✅ Ruff checks passed!"
 
   typescript-checks:
