fix: resolve remaining CI issues
- Remove unused 'func' import in mobile endpoints
- Use npm ci --legacy-peer-deps to handle dependency conflicts
- These allow all PRs to pass CI checks

--- a/.github/workflows/code-quality-check.yml
+++ b/.github/workflows/code-quality-check.yml
@@ -54,7 +54,7 @@ jobs:
     
     - name: Install dependencies
       working-directory: CashApp-iOS/CashAppPOS
-      run: npm ci
+      run: npm ci --legacy-peer-deps
     
     - name: TypeScript type check
       working-directory: CashApp-iOS/CashAppPOS
