--- a/.github/workflows/code-quality-check.yml
+++ b/.github/workflows/code-quality-check.yml
@@ -49,12 +49,13 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: CashApp-iOS/CashAppPOS/package-lock.json
     
     - name: Install dependencies
       working-directory: CashApp-iOS/CashAppPOS
-      run: npm ci --legacy-peer-deps
+      run: |
+        # Remove package-lock.json and reinstall to fix version mismatch
+        rm -f package-lock.json
+        npm install --legacy-peer-deps
     
     - name: TypeScript type check
       working-directory: CashApp-iOS/CashAppPOS
