--- a/CashApp-iOS/CashAppPOS/package.json
+++ b/CashApp-iOS/CashAppPOS/package.json
@@ -69,10 +69,9 @@
     "@react-native/eslint-config": "^0.73.0",
     "@react-native/metro-config": "^0.73.0",
     "@react-native/typescript-config": "^0.73.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^13.2.0",
-    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.0",
-    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
@@ -89,7 +88,7 @@
     "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "patch-package": "^8.0.0",
-    "prettier": "^3.0.0",
+    "prettier": "^2.8.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.0.0"
   },
