chore: cherry-pick batch 8 from PR #467
Cherry-picked 25 non-conflicting files from fix/eslint-imports-remaining
Progress: 200/     332 files processed

--- a/CashApp-iOS/CashAppPOS/e2e/config.json
+++ b/CashApp-iOS/CashAppPOS/e2e/config.json
@@ -5,14 +5,11 @@
   "testRegex": "\\.e2e\\.js$",
   "reporters": [
     "default",
-    [
-      "jest-junit",
-      {
-        "outputDirectory": "e2e/reports",
-        "outputName": "e2e-results.xml",
-        "suiteName": "E2E Tests"
-      }
-    ]
+    ["jest-junit", {
+      "outputDirectory": "e2e/reports",
+      "outputName": "e2e-results.xml",
+      "suiteName": "E2E Tests"
+    }]
   ],
   "setupFilesAfterEnv": ["./e2e/setup.js"],
   "verbose": true
