feat: install pre-commit hooks and update CLAUDE.md with comprehensive syntax checking guide
- Installed pre-commit package and activated git hooks
- Fixed YAML syntax errors in .pre-commit-config.yaml
- Fixed remaining Python syntax errors in config.py
- Updated CLAUDE.md with:
  - Clear indication that pre-commit hooks are NOW INSTALLED
  - Comprehensive list of ALL available syntax checking tools
  - Step-by-step instructions for using each tool
  - Quick reference card at the end
  - Emphasis on the week of cleanup that happened due to not using these tools

Pre-commit hooks now automatically check:
- Python syntax (ruff, py_compile, AST)
- ESLint with zero warnings
- TypeScript type checking
- No console statements
- No TypeScript any types

This ensures syntax errors NEVER make it into commits again.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     rev: v0.8.6
     hooks:
       - id: ruff
-        args: [--select, E999, --fix]  # E999: SyntaxError
+        args: [--select, E, --fix]  # E: All error codes
         files: ^backend/.*\.py$
         name: Check Python syntax errors
         description: Prevents committing files with syntax errors
@@ -17,7 +17,7 @@ repos:
     hooks:
       - id: python-syntax-check
         name: Validate Python syntax
-        entry: python -m py_compile
+        entry: python3 -m py_compile
         language: system
         files: ^backend/.*\.py$
         pass_filenames: true
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: docstring-check
         name: Check for unterminated docstrings
-        entry: python -c "import ast; import sys; ast.parse(open(sys.argv[1]).read())"
+        entry: python3 -c "import ast; import sys; ast.parse(open(sys.argv[1]).read())"
         language: system
         files: ^backend/.*\.py$
         pass_filenames: true
@@ -55,14 +55,16 @@ repos:
 
       - id: no-console-check
         name: Check for console statements
-        entry: bash -c 'grep -r "console\." --include="*.ts" --include="*.tsx" --include="*.js" --include="*.jsx" CashApp-iOS/CashAppPOS/src && echo "❌ Console statements found!" && exit 1 || exit 0'
+        entry: bash
+        args: [-c, "! grep -r 'console\\.' --include='*.ts' --include='*.tsx' --include='*.js' --include='*.jsx' CashApp-iOS/CashAppPOS/src || (echo 'Console statements found!' && exit 1)"]
         language: system
         pass_filenames: false
         description: Prevent console statements in production code
 
       - id: no-any-check
         name: Check for TypeScript any
-        entry: bash -c 'grep -r ": any" --include="*.ts" --include="*.tsx" CashApp-iOS/CashAppPOS/src && echo "❌ TypeScript any types found!" && exit 1 || exit 0'
+        entry: bash
+        args: [-c, "! grep -r ': any' --include='*.ts' --include='*.tsx' CashApp-iOS/CashAppPOS/src || (echo 'TypeScript any types found!' && exit 1)"]
         language: system
         pass_filenames: false
         description: Prevent use of any type in TypeScript
