--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     rev: v0.8.6
     hooks:
       - id: ruff
-        args: [--select, E, --fix]  # E: All error codes
+        args: [--select, E999, --fix]  # E999: SyntaxError
         files: ^backend/.*\.py$
         name: Check Python syntax errors
         description: Prevents committing files with syntax errors
@@ -17,7 +17,7 @@ repos:
     hooks:
       - id: python-syntax-check
         name: Validate Python syntax
-        entry: python3 -m py_compile
+        entry: python -m py_compile
         language: system
         files: ^backend/.*\.py$
         pass_filenames: true
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: docstring-check
         name: Check for unterminated docstrings
-        entry: python3 -c "import ast; import sys; ast.parse(open(sys.argv[1]).read())"
+        entry: python -c "import ast; import sys; ast.parse(open(sys.argv[1]).read())"
         language: system
         files: ^backend/.*\.py$
         pass_filenames: true
@@ -55,16 +55,14 @@ repos:
 
       - id: no-console-check
         name: Check for console statements
-        entry: bash
-        args: [-c, "! grep -r 'console\\.' --include='*.ts' --include='*.tsx' --include='*.js' --include='*.jsx' CashApp-iOS/CashAppPOS/src || (echo 'Console statements found!' && exit 1)"]
+        entry: 'bash -c ''grep -r "console\." --include="*.ts" --include="*.tsx" --include="*.js" --include="*.jsx" CashApp-iOS/CashAppPOS/src && echo "Console statements found!" && exit 1 || exit 0'''
         language: system
         pass_filenames: false
         description: Prevent console statements in production code
 
       - id: no-any-check
         name: Check for TypeScript any
-        entry: bash
-        args: [-c, "! grep -r ': any' --include='*.ts' --include='*.tsx' CashApp-iOS/CashAppPOS/src || (echo 'TypeScript any types found!' && exit 1)"]
+        entry: 'bash -c ''grep -r ": any" --include="*.ts" --include="*.tsx" CashApp-iOS/CashAppPOS/src && echo "TypeScript any types found!" && exit 1 || exit 0'''
         language: system
         pass_filenames: false
         description: Prevent use of any type in TypeScript
