--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
     hooks:
       - id: python-syntax-check
         name: Validate Python syntax
-        entry: python -m py_compile
+        entry: python3 -m py_compile
         language: system
         files: ^backend/.*\.py$
         pass_filenames: true
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: docstring-check
         name: Check for unterminated docstrings
-        entry: python -c "import ast; import sys; ast.parse(open(sys.argv[1]).read())"
+        entry: python3 -c "import ast; import sys; ast.parse(open(sys.argv[1]).read())"
         language: system
         files: ^backend/.*\.py$
         pass_filenames: true
