fix: add missing SUMUP_ENVIRONMENT to deployment specs
- Added SUMUP_ENVIRONMENT to backend/deploy/spec.yaml
- Added SUMUP_ENVIRONMENT to backend/deploy/docker-compose.yml
- This was causing deployment failures because the env var was set in DigitalOcean but not declared in specs

The validation error 'SumUp environment must be production or sandbox' was happening because the app never received the SUMUP_ENVIRONMENT value from DigitalOcean.

--- a/backend/deploy/docker-compose.yml
+++ b/backend/deploy/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - SQUARE_LOCATION_ID=${SQUARE_LOCATION_ID}
       - SUMUP_API_KEY=${SUMUP_API_KEY}
       - SUMUP_MERCHANT_CODE=${SUMUP_MERCHANT_CODE}
+      - SUMUP_ENVIRONMENT=${SUMUP_ENVIRONMENT}
       - FYNLO_SMART_ROUTING=true
       - FYNLO_ANALYTICS=true
       - FYNLO_COST_OPTIMIZATION_ALERTS=true
