fix: clean up PR - remove unintended files and fix issues
- Removed .cursor/ directory with potential secrets
- Removed duplicate nested package files (CashApp-iOS/CashAppPOS/CashApp-iOS/)
- Removed build artifacts (main.jsbundle.map) and added to .gitignore
- Removed unrelated DOCS/archived files
- Removed debug/test files that were temporary
- Restored original force-rebuild-bundle.sh with correct shebang

This commit keeps only the essential theme type fixes in 8 screen files.

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@ backend/manual_fix_instructions.md
 backend/debug_*.py
 backend/test_*.py
 backend/fix_*.py
+# Bundle source maps (should not be committed)
+*.jsbundle.map
