fix: Narrow .dockerignore pattern to avoid excluding legitimate files
BugBot correctly identified that the pattern *test*.py was overly broad and could exclude legitimate files like attestation.py, contest.py, or latest.py.

Changed from:
- *test*.py (too broad)

Changed to:
- test_*.py (test files starting with test_)
- *_test.py (test files ending with _test)
- tests/ (test directories)

This ensures only actual test files are excluded while allowing legitimate application files that might contain 'test' in their names.

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -40,7 +40,8 @@ logs/
 # Security: Exclude test files with insecure configs or hardcoded passwords
 setup_database.py
 test_*.py
-*test*.py
+*_test.py
+tests/
 # Already removed but listed for documentation:
 # minimal_app.py
 # minimal_server.py
