--- a/CashApp-iOS/CashAppPOS/ios/Podfile
+++ b/CashApp-iOS/CashAppPOS/ios/Podfile
@@ -2,6 +2,8 @@
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
 require File.join(File.dirname(`node --print "require.resolve('@react-native-community/cli-platform-ios/package.json')"`), "native_modules")
 
+# BREAKING CHANGE: iOS 15.0 required by SumUp SDK 6.x for tap-to-pay support
+# Previous: iOS 13.4 (supported by SDK 4.x which lacks tap-to-pay APIs)
 platform :ios, '15.0'
 install! 'cocoapods', :deterministic_uuids => false
 
@@ -21,6 +23,9 @@ target 'CashAppPOS' do
   # pod 'SquareBuyerVerificationSDK', :modular_headers => true
   
   # Official SumUp iOS SDK for Tap to Pay on iPhone
+  # Version 6.1.1 is the latest available (6.2 doesn't exist in CocoaPods)
+  # This version includes checkTapToPayAvailability and tapToPay methods (verified)
+  # Previous: SDK 4.0 which lacks tap-to-pay APIs
   pod 'SumUpSDK', '~> 6.1.1'
   
   post_install do |installer|
